Fixed padding with sign and character. Fixed issue with invisible tree blocking ability to click character

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -450,6 +450,7 @@ Section: Greenery
 #treeHitbox{
     opacity:0; 
     height:256px;
+    position: relative;
     z-index:-5;
 }
 
